# geospatial-mlops-pipeline

./: .gitignore  README.md  pyproject.toml  requirements-all.txt  requirements-gpu.txt  requirements-ml.txt  requirements-ray.txt
docker/: Dockerfile.ray-cpu  Dockerfile.slim
docs/: DEP_AND_DOCKER_STRATEGY.md  architecture.md  contracts.md  mlflow_registry.md  pipeline_walkthrough.md  roadmap.md  task_plugins.md
docs/diagrams/: README.md  contracts_flow.mmd  core_plugin_architecture.mmd  golden_evaluation.mmd  mlflow_promotion.mmd  pipeline_lifecycle.mmd  task_plugin_detail.mmd
infra/ray-local/: docker-compose.yml
src/cli/: generate_tiles.py  make_split.py  task_registry.py
src/geo_mlops/cli/: README.md  evaluate.py  gate.py  make_split.py  register.py  tile.py  train.py
src/geo_mlops/core/: README.md
src/geo_mlops/core/config/: loader.py
src/geo_mlops/core/contracts/: gate_contract.py  tile_contract.py  train_contract.py
src/geo_mlops/core/data/: base_dataset.py  generate_context.py
src/geo_mlops/core/evaluation/: engine.py
src/geo_mlops/core/gating/: engine.py
src/geo_mlops/core/inference/: engine.py
src/geo_mlops/core/io/: train_io.py
src/geo_mlops/core/preprocessing/: context.py
src/geo_mlops/core/registry/: task_registry.py
src/geo_mlops/core/splitting/: README.md  split.py  stage.py
src/geo_mlops/core/tiling/: README.md  engine.py  policies.py  stage.py  utils.py
src/geo_mlops/core/tiling/adapters/: base.py
src/geo_mlops/core/training/: engine.py
src/geo_mlops/core/utils/: cuda.py  random.py  windows.py
src/geo_mlops/models/: engine.py  evals.py  losses.py  utils.py
src/geo_mlops/models/backbones/: segformer.py
src/geo_mlops/models/fusion/: concat_fusion.py
src/geo_mlops/tasks/: README.md
src/geo_mlops/tasks/segmentation/: README.md
src/geo_mlops/tasks/segmentation/building/: README.md  dataset.py  loss.py  losses.py  metrics.py  model.py  model_factory.py  task.py  tiling_factory.py
src/geo_mlops/tasks/segmentation/building/config/: all-tiles.yaml  default.yaml  hard-mining.yaml
src/tasks/classification/: tiling_adapter.py
src/tasks/segmentation/: tiling_adapter.py
src/tasks/segmentation/building/: adapter.py  dataset.py  tiling_factory.py
(+13 files in other folders)
